Fixed bug #5
- Cards now don't go out of screen on mobile
- Content has now been fixed
- Implemented smooth scrolling

--- a/css/cards.css
+++ b/css/cards.css
@@ -1,7 +1,7 @@
 /*
 Author: Elaiah S. Asperin
 Created: 24 December 2021
-Last Modified: 24 December 2021
+Last Modified: 27 December 2021
 Description: Cards stylsheet for "AI: The Inner Workings"
 */
 
@@ -11,13 +11,43 @@ Description: Cards stylsheet for "AI: The Inner Workings"
 
 /* General Styles */
 
-.card-list {
+.cards {
     display: flex;
-    justify-content: center;
+
+    background-color: #A3E3F3;
+
     padding: 3rem;
+
+    overflow-x: scroll;
 }
 
-.card {
+.card-list-header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    background: #071e3d;
+    box-shadow: -1rem 0 3rem #000;
+    border-radius: 1rem;
+
+    height: 350px;
+    width: 400px;
+    min-width: 250px;
+
+    padding: 1.5rem;
+    
+    margin-right: 1rem;
+
+    position: relative;
+
+    transition: 200ms;
+}
+
+.card-list {
+    display: flex;
+}
+
+.card, .card-list-header {
     display: flex;
     flex-direction: column;
 
@@ -44,6 +74,20 @@ Description: Cards stylsheet for "AI: The Inner Workings"
     transform: translateX(130px);
 }
 
+.card:hover .header-text, .card-list-header:hover .header-text {
+    text-shadow: none;
+
+    background: linear-gradient(90deg, #26AFD9, #094978);
+    background-clip: text;
+
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+}
+
+.header-text p, .header-text h2 {
+    margin: 0px;
+}
+
 .card:not(:first-child) {
     margin-left: -130px;
 }
@@ -54,16 +98,6 @@ Description: Cards stylsheet for "AI: The Inner Workings"
     grid-template-columns: 75px 1fr;
 
     position: relative;
-}
-
-.card-header .header-text:hover {
-    text-shadow: none;
-
-    background: linear-gradient(90deg, #26AFD9, #094978);
-    background-clip: text;
-
-    -webkit-text-fill-color: transparent;
-    -webkit-background-clip: text;
 }
 
 .card-header img {
@@ -81,7 +115,7 @@ Description: Cards stylsheet for "AI: The Inner Workings"
     height: 48px;
 
     position: absolute;
-    bottom: 16px;
+    top: calc(50% - 10px);
     left: 0px;
 
     fill: none;
@@ -89,6 +123,11 @@ Description: Cards stylsheet for "AI: The Inner Workings"
     stroke-width: 8px;
     stroke-linecap: round;
     pointer-events: none;
+}
+
+.card-list-header svg {
+    top: calc(50% - 10px);
+    left: 1.5rem;
 }
 
 .visual {
