--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 /*
 Author: Elaiah S. Asperin
 Created: 21 December 2021
-Last Modified: 24 December 2021
+Last Modified: 27 December 2021
 Description: General stylsheet for "AI: The Inner Workings"
 */
 
@@ -9,12 +9,23 @@ Description: General stylsheet for "AI: The Inner Workings"
 /* ========================================================================= */
 
 
-/* Imported Styles */
+/* Imported Fonts and Styles */
 
 @import "navbar.css";
 @import "title.css";
 @import "cards.css";
+@import "content.css";
 @import "footer.css";
+
+@font-face {
+    font-family: "Tomorrow People";
+    src: url("TOMOPRG_.ttf");
+}
+
+@font-face {
+    font-family: "Nugo Sans Light";
+    src: url("NugoSansLight-9YzoK.ttf");
+}
 
 
 /* ========================================================================= */
@@ -24,13 +35,17 @@ Description: General stylsheet for "AI: The Inner Workings"
 
 :root {
     font-size: 16px;
-    font-family: 'Open Sans', sans-serif;
+    font-family: "Century Gothic", sans-serif;
 
     --text-primary: rgb(182, 182, 182);
     --text-secondary: rgb(236, 236, 236);
     --bg-primary: rgb(9, 73, 120);
     --bg-secondary: rgb(6, 50, 81);
     --transition-speed: 500ms;
+}
+
+html {
+    scroll-behavior: smooth;
 }
 
 body {
@@ -49,7 +64,11 @@ main {
     padding: 1rem;
 }
 
-hr {
+h1, h2, h3, h4, h5, h6 {
+    font-family: "Roboto Mono", monospace;
+}
+
+.transition {
     background-color: white;
     box-sizing: border-box;
 
@@ -64,13 +83,11 @@ hr {
 
 main a:link, main a:visited {
     color: white;
-    transition: color var(--transition-speed) ease;
     text-decoration: none;
 }
 
 main a:hover, main a:active {
     color: #A3E3F3;
-    transition: color var(--transition-speed) ease;
     text-decoration: none;
 }
 
@@ -84,12 +101,16 @@ body::-webkit-scrollbar {
     width: 0.5rem;
 }
 
-body::-webkit-scrollbar-track {
+.cards::-webkit-scrollbar {
+    height: 0.5rem;
+}
+
+::-webkit-scrollbar-track {
     /* To make the track invisible */
     background-color: rgba(0, 0, 0, 0);
 }
 
-body::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
     background-color: var(--bg-primary);
     border-radius: 0.25rem;
 }
