--- a/css/title.css
+++ b/css/title.css
@@ -1,7 +1,7 @@
 /*
 Author: Elaiah S. Asperin
 Created: 21 December 2021
-Last Modified: 24 December 2021
+Last Modified: 27 December 2021
 Description: Title section stylesheet for "AI: The Inner Workings"
 */
 
@@ -11,7 +11,7 @@ Description: Title section stylesheet for "AI: The Inner Workings"
 
 /* General Styles */
 
-main > header {
+.page-header {
     background: url("../images/background.jpg") no-repeat top center;
     background-size: cover;
 
@@ -21,7 +21,7 @@ main > header {
     position: relative;
 }
 
-main > header > h1 {
+.page-header > h1 {
     text-align: center;
     font-size: 96px;
 
@@ -29,7 +29,7 @@ main > header > h1 {
     padding: 3rem 1rem 0px 1rem;
 }
 
-main > header > h2 {
+.page-header > h2 {
     text-align: center;
     font-size: 48px;
 
@@ -37,7 +37,7 @@ main > header > h2 {
     padding: 0px 1rem 3rem 1rem;
 }
 
-main > header span {
+.page-header span {
     width:100%;
     height:100%;
 
@@ -54,16 +54,16 @@ main > header span {
 
 /* For small screens */
 @media only screen and (max-width: 640px) {
-    main > header {
+    .page-header {
         min-height: 425px;
     }
 
-    main > header > h1 {
+    .page-header > h1 {
         text-align: left;
         font-size: 72px;
     }
     
-    main > header > h2 {
+    .page-header > h2 {
         text-align: left;
         font-size: 36px;
     }
@@ -71,16 +71,16 @@ main > header span {
 
 /* For extremely small screens */
 @media only screen and (max-width: 480px) {
-    main > header {
+    .page-header {
         min-height: 300px;
     }
 
-    main > header > h1 {
+    .page-header > h1 {
         text-align: left;
         font-size: 48px;
     }
     
-    main > header > h2 {
+    .page-header > h2 {
         text-align: left;
         font-size: 24px;
     }
